# oberon-compiler

./: .gitignore  AST.ob  Base1.Mod  Base2.Mod  Base2.ob  Base3.ob  CCodegen.ob  CMakeLists.txt  Compiler.ob  Decls.ob  FibFact.Mod  FibFact.ob  Lex.Mod  Lex.ob  Makefile  Makefile.cbootstrap  Oberon.Mod  OopTest.ob  Out.Mod  Out.ob  OutSys.Mod  Parse.ob  README  README.md  Resolve.ob  SYSTEM.ob  Simple.ob  Test.Mod  Test.ob  Texts.Mod  ast.c  buf.c  builtin.defs  c_codegen.c  compile  lex.c  main.c  oberon1.c  parse.c  resolve.c  (+3 more)
ProjectOberon/: Files.ob  Oberon.ob  SYSTEM.ob
base/: Args.ob  Out.ob  runtime.c
c_bootstrap/: Base1.ob  Base2.ob  Base3.ob  Test.ob  ast.c  buf.c  builtin.defs  c_codegen.c  lex.c  main.c  parse.c  resolve.c  type.c
compiler/: AST.ob  Args.ob  CCodegen.ob  Compiler.ob  Decls.ob  DumpDecl.ob  Lex.ob  Out.ob  Parse.ob  R5Codegen.ob  R5Compiler.ob  RCodegen.ob  RCompiler.ob  compile  fmt.sh  perr.py  rcompile  runtime.c
contrib/: compile  fmt.sh  rcompile
doc/: Oberon.g4  Oberon.interp  Oberon.tokens  OberonBaseListener.java  OberonLexer.interp  OberonLexer.java  OberonListener.java  OberonParser.java  language-extensions.md  language-extensions.txt  syntax.txt  test-grammar.sh
examples/: .gitignore  Apple1.md  Apple1.ob  Cairo.ob  CairoTest.ob  Console.ob  Curses.ob  Decimals.ob  M6502.ob  Makefile  Math.ob  PrettyPrint.ob  PrettyPrintLex.ob  README.md  Test6502.ob  cairo.c  console.c  curses.c  fig6502.mon
oberon_bootstrap/: README.md  oberon.c  runtime.c
risc_bootstrap/: README.md  regen.sh  risc_code.txt
risc_runner/: risc_code.txt  runner.c
tests/: ArTest.ob  ArrayTest.ob  Arrays.ob  Ascii.ob  CMakeLists.txt  CaseTest.ob  Cases.ob  CondTest.ob  ExpMod.ob  FibFact.ob  FibFact.output  FibFact2.ob  FibFact3.ob  FibFactExt.ob  FieldTest.ob  IOOperations.ob  IOTest.ob  IOTest.output  KnightsTour.c  KnightsTour.ob  KnightsTour.output  LangExtensions.ob  LangExtensions.ob.disabled  LangExtensionsTests.ob  LangExtensionsTests.output  M6502.Mod  M6502.ob  Mandelbrot.ob  Maze.ob  Maze.output  MiscFeatures.ob  Modulo.ob  Oop.ob  Oop2.ob  OopTest.ob  OopTest2.ob  Pentominoes.ob  Pentominoes.output  Pointers.ob  PtrTest.ob  (+49 more)
tests/disabled/: AST.ob  Buffers.ob  Decls.ob  LangExtensions.ob  Lex.ob  NativeC.ob  Parse.ob  README.md  lang_extensions.c  native_c.c
tests/errors/: ArrayFail.ob  ArrayFail2.ob  CastFail.ob  NilFail.ob  README.md  run-fail-tests.sh
tests/goldens/: ArrayTest.output  Ascii.output  CaseTest.output  ExpMod.output  IOOperations.output  IOTest.output  KnightsTour.output  LangExtensions.output  LangExtensionsTests.output  Mandelbrot.output  Maze.output  MiscFeatures.output  Oop.output  Oop2.output  OopTest.output  OopTest2.output  Pointers.output  PtrTest.output  RealNumbers.output  RecCopy.output  Recurse.output  Recurse2.output  RunCompiler.output  SetTest.output  Sets.output  Shadow.output  Sound.output  StateMachine.output  StrTest.output  Strings.output  Sudoku.output  TenPrint.output  Test6502.output  TestBed.output  TestCompiler.output  TestDecls.output  TestLex.output  TypeExt.output
tests/native/: Makefile  cairo.c  cairo_native.h
